# multi-model-debate

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: fetch_hallu.py  graders.py  hallu_grader.py  hallu_tests.json  hallucination.py  judge.py  run_benchmark.py  tests.json
benchmark/results/comparison/: scorecard.json  scorecard.md
benchmark/results/hallu/: scorecard.md  summary.json
benchmark/results/hallu_abstain/: scorecard.md  summary.json
benchmark/results/moa_hallu_abstain/: scorecard.md  summary.json
benchmark/results/moa_hallu_plain/: scorecard.md  summary.json
benchmark/results/moa_objective/: scorecard.json  scorecard.md
benchmark/results/quick/: scorecard.json  scorecard.md
docs/: INSTALL.md  MANUAL.md  PAPER.md  RESULTS.md
examples/: basic.py
multimodel_debate/: __init__.py  __main__.py  debate.py  models.py
scripts/: sync_skills.py
skills/claude/multi-model-debate/: SKILL.md
skills/claude/multi-model-debate/references/: integration.md
skills/claude/multi-model-debate/scripts/: debate.py  openrouter.py  requirements.txt
skills/hermes/: SKILL.md  run.py  tool.json
